Account for entity interpolation on the moves